--- a/html/main.html
+++ b/html/main.html
@@ -5,56 +5,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Домашнее задание</title>
     <link href="../css/bootstrap.min.css" rel="stylesheet"/>
+    <style>
+    .product-card {
+        margin-bottom: 100px; /* Установите желаемое значение отступа */
+    }
+    </style>
 </head>
 <body>
 <div class="row">
-    <div class="col-2"></div>
+    <div class="col-2" style="background-color: black; color: white; padding: 10px; height: 100vh;">
+        <div class="d-flex align-items-center">
+            <img src="../img/bootstrap-logo-white.svg" class="card-img-top" alt="..."
+                 style="width: 25px; margin-right: 10px;">
+            <h5>Меню</h5>
+        </div>
+        <p>
+            <button type="button" class="btn btn-light mt-4 ms-3">Главная</button>
+        </p>
+        <p>
+            <button type="button" class="btn btn-light ms-3">Категории</button>
+        </p>
+        <p>
+            <button type="button" class="btn btn-light ms-3">Заказы</button>
+        </p>
+        <p>
+            <button type="button" class="btn btn-light ms-3">Контакты</button>
+        </p>
+        <div style="position: absolute; bottom: 0;" class="dropdown mb-2">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                Пользователь
+            </button>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Профиль</a></li>
+                <li><a class="dropdown-item" href="#">Выход</a></li>
+            </ul>
+        </div>
+    </div>
     <div class="col-8">
         <div class="row">
             <div class="col-12">
-                <h1 class="text-center mt-5">Главная</h1>
+                <h1 class="text-center ms-4">Главная</h1>
+                <p class="text-center ms-4">Вы находитесь на сайте, предназначенном для продажи товаров</p>
+                <div class="row">
+                    <div class="col-2 "></div>
+                    <div class="col-3 mb-5">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title text-center p-3 mb-2 bg-dark-subtle text-dark-emphasis">Товар 1</h5>
+                                <h3 class="card-subtitle mb-2 text-body-secondary text-center mt-2">$100</h3>
+                                <p class="card-text">10 users included, 2GB of storage, Email supported, Help center access.</p>
+                                <button type="button" class="btn btn-outline-primary w-100">Купить</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3 ms-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title text-center p-3 mb-2 bg-dark-subtle text-dark-emphasis">Товар 2</h5>
+                                <h3 class="card-subtitle mb-2 text-body-secondary text-center mt-2">$100</h3>
+                                <p class="card-text">10 users included, 2GB of storage, Email supported, Help center access.</p>
+                                <button type="button" class="btn btn-outline-primary w-100">Купить</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3 ms-4">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title text-center p-3 mb-2 bg-dark-subtle text-dark-emphasis">Товар 3</h5>
+                                <h3 class="card-subtitle mb-2 text-body-secondary text-center mt-2">$100</h3>
+                                <p class="card-text">10 users included, 2GB of storage, Email supported, Help center access.</p>
+                                <button type="button" class="btn btn-outline-primary w-100">Купить</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="col-3"></div>
-            <div class="col-6">
-                Вы находитесь на сайте, предназначенном для продажи товаров
-            </div>
-            <div class="col-3"></div>
         </div>
     </div>
     <div class="col-2"></div>
-    <div class="row mt-5">
-        <div class="col-2"></div>
-        <div class="col-3">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title text-center p-3 mb-2 bg-dark-subtle text-dark-emphasis">Товар 1</h5>
-                    <h3 class="card-subtitle mb-2 text-body-secondary text-center mt-2">$100</h3>
-                    <p class="card-text">10 users included, 2GB of storage, Email supported, Help center access.</p>
-                    <button type="button" class="btn btn-outline-primary w-100">Купить</button>
-                </div>
-            </div>
-        </div>
-        <div class="col-3">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title text-center p-3 mb-2 bg-dark-subtle text-dark-emphasis">Товар 2</h5>
-                    <h3 class="card-subtitle mb-2 text-body-secondary text-center mt-2">$100</h3>
-                    <p class="card-text">10 users included, 2GB of storage, Email supported, Help center access.</p>
-                    <button type="button" class="btn btn-outline-primary w-100">Купить</button>
-                </div>
-            </div>
-        </div>
-        <div class="col-3">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title text-center p-3 mb-2 bg-dark-subtle text-dark-emphasis">Товар 3</h5>
-                    <h3 class="card-subtitle mb-2 text-body-secondary text-center mt-2">$100</h3>
-                    <p class="card-text">10 users included, 2GB of storage, Email supported, Help center access.</p>
-                    <button type="button" class="btn btn-outline-primary w-100">Купить</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+</div> <!-- Закрывающий div для .row -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
