implemented menu and main

--- a/html/main.html
+++ b/html/main.html
@@ -3,13 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Домашнее задание</title>
+    <title>Главная</title>
     <link href="../css/bootstrap.min.css" rel="stylesheet"/>
-    <style>
-    .product-card {
-        margin-bottom: 100px; /* Установите желаемое значение отступа */
-    }
-    </style>
 </head>
 <body>
 <div class="row">
@@ -23,10 +18,10 @@
             <button type="button" class="btn btn-light mt-4 ms-3">Главная</button>
         </p>
         <p>
-            <button type="button" class="btn btn-light ms-3">Категории</button>
+            <button type="button" class="btn btn-light ms-3">Каталог</button>
         </p>
         <p>
-            <button type="button" class="btn btn-light ms-3">Заказы</button>
+            <button type="button" class="btn btn-light ms-3">Категория</button>
         </p>
         <p>
             <button type="button" class="btn btn-light ms-3">Контакты</button>
@@ -84,7 +79,7 @@
         </div>
     </div>
     <div class="col-2"></div>
-</div> <!-- Закрывающий div для .row -->
+</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
