--- a/html/catalog.html
+++ b/html/catalog.html
@@ -1,10 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Каталог</title>
+    <link href="../css/bootstrap.min.css" rel="stylesheet"/>
+    <style>
+        .indent-product {
+            margin-left: 200px;
+    }
+        .small-img {
+            width: 350px;
+        }
+    </style>
 </head>
 <body>
-
+<div class="row">
+    <div class="col-2" style="background-color: black; color: white; padding: 10px; height: 100vh;">
+        <div class="d-flex align-items-center">
+            <img src="../img/bootstrap-logo-white.svg" class="card-img-top" alt="..."
+                 style="width: 25px; margin-right: 10px;">
+            <h5>Меню</h5>
+        </div>
+        <p>
+            <button type="button" class="btn btn-light mt-4 ms-3">Главная</button>
+        </p>
+        <p>
+            <button type="button" class="btn btn-light ms-3">Каталог</button>
+        </p>
+        <p>
+            <button type="button" class="btn btn-light ms-3">Категория</button>
+        </p>
+        <p>
+            <button type="button" class="btn btn-light ms-3">Контакты</button>
+        </p>
+        <div style="position: absolute; bottom: 0;" class="dropdown mb-2">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                Пользователь
+            </button>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Профиль</a></li>
+                <li><a class="dropdown-item" href="#">Выход</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="col-10">
+        <h1 class="text-center mt-4">Каталог</h1>
+        <div class="row">
+            <div class="col-6">
+                <div class="card indent-product mt-3" style="width: 22rem;">
+                    <img src="../img/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
+                    <div class="card-body">
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <div class="d-grid gap-2 d-md-flex justify-content">
+                            <button class="btn btn-primary me-md-2" type="button">View</button>
+                            <button class="btn btn-primary" type="button">Edit</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card indent-product mt-5" style="width: 22rem;">
+                    <img src="../img/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
+                    <div class="card-body">
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <div class="d-grid gap-2 d-md-flex justify-content">
+                            <button class="btn btn-primary me-md-2" type="button">View</button>
+                            <button class="btn btn-primary" type="button">Edit</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="card ms-5 mt-3" style="width: 22rem;">
+                    <img src="../img/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
+                    <div class="card-body">
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <div class="d-grid gap-2 d-md-flex justify-content">
+                            <button class="btn btn-primary me-md-2" type="button">View</button>
+                            <button class="btn btn-primary" type="button">Edit</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card ms-5 mt-5" style="width: 22rem;">
+                    <img src="../img/Screenshot_64.png" class="card-img-top small-img" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <div class="d-grid gap-2 d-md-flex justify-content">
+                            <button class="btn btn-primary me-md-2" type="button">View</button>
+                            <button class="btn btn-primary" type="button">Edit</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
