--- a/html/contacts.html
+++ b/html/contacts.html
@@ -1,10 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Категория</title>
+    <link href="../css/bootstrap.min.css" rel="stylesheet"/>
+    <style>
+        .indent-category {
+                margin-left: 100px;
+        }
+    </style>
 </head>
 <body>
+<div class="row">
+    <div class="col-2" style="background-color: black; color: white; padding: 10px; height: 100vh;">
+        <div class="d-flex align-items-center">
+            <img src="../img/bootstrap-logo-white.svg" class="card-img-top" alt="..."
+                 style="width: 25px; margin-right: 10px;">
+            <h5>Меню</h5>
+        </div>
+        <p>
+            <button type="button" class="btn btn-light mt-4 ms-3">Главная</button>
+        </p>
+        <p>
+            <button type="button" class="btn btn-light ms-3">Каталог</button>
+        </p>
+        <p>
+            <button type="button" class="btn btn-light ms-3">Категория</button>
+        </p>
+        <p>
+            <button type="button" class="btn btn-light ms-3">Контакты</button>
+        </p>
+        <div style="position: absolute; bottom: 0;" class="dropdown mb-2">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                Пользователь
+            </button>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Профиль</a></li>
+                <li><a class="dropdown-item" href="#">Выход</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="col-9">
+        <div class="row">
+            <div class="col-12">
+                <h1 class="text-center mt-5 indent-category">Контакты</h1>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="card mt-5 ms-5">
+                            <div class="card-body">
+                                <form>
+                                    <div class="mb-3">
+                                        <input type="text" class="form-control" placeholder="Имя">
+                                    </div>
+                                    <div class="mb-3">
+                                        <input type="email" class="form-control" placeholder="Почта">
+                                    </div>
 
+                                    <div class="mb-3">
+                                        <textarea class="form-control" placeholder="Сообщение" rows="3"></textarea>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Отправить</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <h3 class="mt-5 ms-5">Наши контакты</h3>
+                        <p class="ms-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                            commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                            velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                            est laborum.</p>
+                        <p class="ms-5">While these feedback styles cannot be styled with CSS, you can still
+                            customize the feedback text through JavaScript.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-1"></div>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
