--- a/html/main.html
+++ b/html/main.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Главная</title>
-    <link href="../css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <style>
+        .indent-product {
+            margin-left: 200px;
+    }
+    </style>
 </head>
 <body>
 <div class="row">
@@ -40,16 +45,18 @@
     <div class="col-8">
         <div class="row">
             <div class="col-12">
-                <h1 class="text-center ms-4">Главная</h1>
-                <p class="text-center ms-4">Вы находитесь на сайте, предназначенном для продажи товаров</p>
+                <h1 class="text-center indent-product">Главная</h1>
+                <p class="text-center indent-product">Вы находитесь на сайте, предназначенном для продажи товаров</p>
                 <div class="row">
                     <div class="col-2 "></div>
                     <div class="col-3 mb-5">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title text-center p-3 mb-2 bg-dark-subtle text-dark-emphasis">Товар 1</h5>
+                                <h5 class="card-title text-center p-3 mb-2 bg-dark-subtle text-dark-emphasis">Товар
+                                    1</h5>
                                 <h3 class="card-subtitle mb-2 text-body-secondary text-center mt-2">$100</h3>
-                                <p class="card-text">10 users included, 2GB of storage, Email supported, Help center access.</p>
+                                <p class="card-text">10 users included, 2GB of storage, Email supported, Help center
+                                    access.</p>
                                 <button type="button" class="btn btn-outline-primary w-100">Купить</button>
                             </div>
                         </div>
@@ -57,9 +64,11 @@
                     <div class="col-3 ms-4">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title text-center p-3 mb-2 bg-dark-subtle text-dark-emphasis">Товар 1</h5>
+                                <h5 class="card-title text-center p-3 mb-2 bg-dark-subtle text-dark-emphasis">Товар
+                                    1</h5>
                                 <h3 class="card-subtitle mb-2 text-body-secondary text-center mt-2">$100</h3>
-                                <p class="card-text">10 users included, 2GB of storage, Email supported, Help center access.</p>
+                                <p class="card-text">10 users included, 2GB of storage, Email supported, Help center
+                                    access.</p>
                                 <button type="button" class="btn btn-outline-primary w-100">Купить</button>
                             </div>
                         </div>
@@ -67,9 +76,11 @@
                     <div class="col-3 ms-4">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title text-center p-3 mb-2 bg-dark-subtle text-dark-emphasis">Товар 1</h5>
+                                <h5 class="card-title text-center p-3 mb-2 bg-dark-subtle text-dark-emphasis">Товар
+                                    1</h5>
                                 <h3 class="card-subtitle mb-2 text-body-secondary text-center mt-2">$100</h3>
-                                <p class="card-text">10 users included, 2GB of storage, Email supported, Help center access.</p>
+                                <p class="card-text">10 users included, 2GB of storage, Email supported, Help center
+                                    access.</p>
                                 <button type="button" class="btn btn-outline-primary w-100">Купить</button>
                             </div>
                         </div>
