--- a/html/catalog.html
+++ b/html/catalog.html
@@ -50,7 +50,7 @@
         <div class="row">
             <div class="col-6">
                 <div class="card indent-product mt-3" style="width: 22rem;">
-                    <img src="../img/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
+                    <img src="C:/Users/Nurlan/IT/Проекты/django/html/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
                     <div class="card-body">
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.</p>
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="card indent-product mt-5" style="width: 22rem;">
-                    <img src="../img/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
+                    <img src="../Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
                     <div class="card-body">
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.</p>
