--- a/html/catalog.html
+++ b/html/catalog.html
@@ -18,7 +18,7 @@
 <div class="row">
     <div class="col-2" style="background-color: black; color: white; padding: 10px; height: 100vh;">
         <div class="d-flex align-items-center">
-            <img src="../img/bootstrap-logo-white.svg" class="card-img-top" alt="..."
+            <img src="../src/img/bootstrap-logo-white.svg" class="card-img-top" alt="..."
                  style="width: 25px; margin-right: 10px;">
             <h5>Меню</h5>
         </div>
@@ -50,7 +50,7 @@
         <div class="row">
             <div class="col-6">
                 <div class="card indent-product mt-3" style="width: 22rem;">
-                    <img src="../img/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
+                    <img src="../src/img/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
                     <div class="card-body">
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.</p>
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="card indent-product mt-5" style="width: 22rem;">
-                    <img src="../img/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
+                    <img src="../src/img/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
                     <div class="card-body">
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.</p>
@@ -74,7 +74,7 @@
             </div>
             <div class="col-6">
                 <div class="card ms-5 mt-3" style="width: 22rem;">
-                    <img src="../img/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
+                    <img src="../src/img/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
                     <div class="card-body">
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.</p>
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="card ms-5 mt-5" style="width: 22rem;">
-                    <img src="../img/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
+                    <img src="../src/img/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
                     <div class="card-body">
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.</p>
