--- a/html/contacts.html
+++ b/html/contacts.html
@@ -23,7 +23,7 @@
             <button type="button" class="btn btn-light mt-4 ms-3">Главная</button>
         </p>
         <p>
-            <button type="button" class="btn btn-light ms-3">Каталог</button>
+            <a href="catalog.html" class="btn btn-light ms-3">Каталог</a>
         </p>
         <p>
             <button type="button" class="btn btn-light ms-3">Категория</button>
