--- a/html/catalog.html
+++ b/html/catalog.html
@@ -23,16 +23,16 @@
             <h5>Меню</h5>
         </div>
         <p>
-            <button type="button" class="btn btn-light mt-4 ms-3">Главная</button>
+            <a href="/main" class="btn btn-light ms-3">Главная</a>
         </p>
         <p>
-            <a href="catalog.html" class="btn btn-light ms-3">Каталог</a>
+            <a href="/catalog" class="btn btn-light ms-3">Каталог</a>
         </p>
         <p>
-            <button type="button" class="btn btn-light ms-3">Категория</button>
+            <a href="/category" class="btn btn-light ms-3">Категории</a>
         </p>
         <p>
-            <button type="button" class="btn btn-light ms-3">Контакты</button>
+            <a href="/contacts" class="btn btn-light ms-3">Контакты</a>
         </p>
         <div style="position: absolute; bottom: 0;" class="dropdown mb-2">
             <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
@@ -50,7 +50,7 @@
         <div class="row">
             <div class="col-6">
                 <div class="card indent-product mt-3" style="width: 22rem;">
-                    <img src="src/img/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
+                    <img src="/src/img/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
                     <div class="card-body">
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.</p>
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="card indent-product mt-5" style="width: 22rem;">
-                    <img src="src/img/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
+                    <img src="/src/img/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
                     <div class="card-body">
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.</p>
@@ -74,7 +74,7 @@
             </div>
             <div class="col-6">
                 <div class="card ms-5 mt-3" style="width: 22rem;">
-                    <img src="src/img/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
+                    <img src="/src/img/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
                     <div class="card-body">
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.</p>
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="card ms-5 mt-5" style="width: 22rem;">
-                    <img src="src/img/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
+                    <img src="/src/img/Screenshot_64.png" class="card-img-top small-img" alt="..." width="150">
                     <div class="card-body">
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                             additional content. This content is a little bit longer.</p>
