--- a/html/contacts.html
+++ b/html/contacts.html
@@ -20,16 +20,16 @@
             <h5>Меню</h5>
         </div>
         <p>
-            <button type="button" class="btn btn-light mt-4 ms-3">Главная</button>
+            <a href="/main" class="btn btn-light ms-3">Главная</a>
         </p>
         <p>
-            <a href="catalog.html" class="btn btn-light ms-3">Каталог</a>
+            <a href="/catalog" class="btn btn-light ms-3">Каталог</a>
         </p>
         <p>
-            <button type="button" class="btn btn-light ms-3">Категория</button>
+            <a href="/category" class="btn btn-light ms-3">Категории</a>
         </p>
         <p>
-            <button type="button" class="btn btn-light ms-3">Контакты</button>
+            <a href="/contacts" class="btn btn-light ms-3">Контакты</a>
         </p>
         <div style="position: absolute; bottom: 0;" class="dropdown mb-2">
             <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
